tests/machine/x/java/group_by_multi_join_sort.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort3384675351/001/Main.java:117: error: bad operand types for binary operator '&&'
					if (!(Objects.equals(String.valueOf(String.valueOf(o.o_orderdate).compareTo(String.valueOf(start_date)) >= 0 && o.o_orderdate).compareTo(String.valueOf(end_date)) < 0 && l.l_returnflag, "R"))) continue;
					                                                                                                             ^
  first type:  boolean
  second type: String
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort3384675351/001/Main.java:133: error: incompatible types: double cannot be converted to Integer
		_res11.add(x.l.l_extendedprice * (1 - x.l.l_discount));
		                               ^
Note: /tmp/TestCompileValidProgramsgroup_by_multi_join_sort3384675351/001/Main.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors


  1| let nation = [
  2|   { n_nationkey: 1, n_name: "BRAZIL" }